# sparg_manuscript

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  spatial.slim
figures/Fig6_Coverage/: Fig6.ipynb  Fig6_Figures.ipynb  Fig6_Notebook.ipynb  README.md  process.py  random_ancestors.csv  random_ancestors_10.csv  random_ancestors_100.csv  random_ancestors_1000.csv  random_ancestors_500.csv
figures/Fig6_Coverage/subfigures/: S_LocationBiasBars.ai
figures/Fig6_Coverage/to_remove/: Fig6-Copy1.ipynb  random_ancestors-Copy1.csv
figures/Fig7_TwoPops/: Fig7.ipynb
figures/Fig7_TwoPops/to_remove/: Fig7.ipynb
figures/Fig7_TwoPops/to_remove/subfigures_old/: Fig7.ipynb
figures/Simulations/UniformStartOneDim/: UniformStartInOneDim.slim
figures/Simulations/UniformStartTwoDims/: UniformStartInTwoDims.slim  simplify.ipynb
figures/SupplementalFigures/S_BoundaryEffects/: S_BoundaryEffects.ipynb  process.py
manuscript/code/: README.md  environment.yml
manuscript/code/figures/Fig6_Coverage/: Fig6.ai  Fig6.ipynb  process.py  random_ancestors_1000_effective_dispersal.csv
manuscript/code/figures/Fig6_Coverage/to_remove/: Fig6.ipynb  process.py  random_ancestors_good.csv
manuscript/code/figures/Fig7_TwoPops/: Fig7.ipynb
manuscript/code/simulations/TwoPopsTwoDims/: TwoPopsTwoDims.slim
manuscript/code/simulations/UniformStartOneDim/: UniformStartInOneDim.slim  simplify.ipynb
manuscript/overleaf/: Abstract.tex  Acknowledgements.tex  Appendix.tex  CoverLetter.tex  Discussion.tex  Introduction.tex  Methods.tex  Predoc.tex  Results.tex  main.tex  references.bib  refs.bib  trial.tex
simulations/TwoPopsTwoDims/: Fig7_TwoPops_TwoDims.slim  TwoPopsTwoDims.slim
simulations/UniformStartOneDim/: README.md  simplify.ipynb
simulations/UniformStartTwoDims/: README.md  UniformStartInTwoDims.slim  simplify.ipynb
sparg/: __init__.py
(+21 files in other folders)
